api/AltV.Net/Native/AltV.Vehicle.cs


            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_LoadAppearanceDataFromBase64(IntPtr vehicle, string base64);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern bool Vehicle_IsEngineOn(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetEngineOn(IntPtr vehicle, bool state);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern bool Vehicle_IsHandbrakeActive(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern byte Vehicle_GetHeadlightColor(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetHeadlightColor(IntPtr vehicle, byte color);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern uint Vehicle_GetRadioStationIndex(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetRadioStationIndex(IntPtr vehicle, uint stationIndex);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern bool Vehicle_IsSirenActive(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetSirenActive(IntPtr vehicle, bool state);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern byte Vehicle_GetLockState(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetLockState(IntPtr vehicle, byte state);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern byte Vehicle_GetDoorState(IntPtr vehicle, byte doorId);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetDoorState(IntPtr vehicle, byte doorId, byte state);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern bool Vehicle_IsWindowOpened(IntPtr vehicle, byte windowId);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetWindowOpened(IntPtr vehicle, byte windowId, bool state);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern bool Vehicle_IsDaylightOn(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern bool Vehicle_IsNightlightOn(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern bool Vehicle_IsRoofOpened(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetRoofOpened(IntPtr vehicle, bool state);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern bool Vehicle_IsFlamethrowerActive(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern float Vehicle_GetLightsMultiplier(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetLightsMultiplier(IntPtr vehicle, float multiplier);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_GetGameStateBase64(IntPtr vehicle, ref IntPtr text);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_LoadGameStateFromBase64(IntPtr vehicle, string base64);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern int Vehicle_GetEngineHealth(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetEngineHealth(IntPtr vehicle, int health);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern int Vehicle_GetPetrolTankHealth(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetPetrolTankHealth(IntPtr vehicle, int health);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern byte Vehicle_GetWheelsCount(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern bool Vehicle_IsWheelBurst(IntPtr vehicle, byte wheelId);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetWheelBurst(IntPtr vehicle, byte wheelId, bool state);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern bool Vehicle_DoesWheelHasTire(IntPtr vehicle, byte wheelId);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetWheelHasTire(IntPtr vehicle, byte wheelId, bool state);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern float Vehicle_GetWheelHealth(IntPtr vehicle, byte wheelId);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetWheelHealth(IntPtr vehicle, byte wheelId, float health);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern byte Vehicle_GetRepairsCount(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern uint Vehicle_GetBodyHealth(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetBodyHealth(IntPtr vehicle, uint health);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern uint Vehicle_GetBodyAdditionalHealth(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetBodyAdditionalHealth(IntPtr vehicle, uint health);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_GetHealthDataBase64(IntPtr vehicle, ref IntPtr text);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_LoadHealthDataFromBase64(IntPtr vehicle, string base64);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern byte Vehicle_GetPartDamageLevel(IntPtr vehicle, byte partId);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetPartDamageLevel(IntPtr vehicle, byte partId, byte damage);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern byte Vehicle_GetPartBulletHoles(IntPtr vehicle, byte partId);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetPartBulletHoles(IntPtr vehicle, byte partId, byte shootsCount);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern bool Vehicle_IsLightDamaged(IntPtr vehicle, byte lightId);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetLightDamaged(IntPtr vehicle, byte lightId, bool isDamaged);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern bool Vehicle_IsWindowDamaged(IntPtr vehicle, byte windowId);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetWindowDamaged(IntPtr vehicle, byte windowId, bool isDamaged);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern bool Vehicle_IsSpecialLightDamaged(IntPtr vehicle, byte specialLightId);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetSpecialLightDamaged(IntPtr vehicle, byte specialLightId,
                bool isDamaged);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern bool Vehicle_HasArmoredWindows(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern float Vehicle_GetArmoredWindowHealth(IntPtr vehicle, byte windowId);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetArmoredWindowHealth(IntPtr vehicle, byte windowId, float health);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern byte Vehicle_GetArmoredWindowShootCount(IntPtr vehicle, byte windowId);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetArmoredWindowShootCount(IntPtr vehicle, byte windowId, byte count);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern byte Vehicle_GetBumperDamageLevel(IntPtr vehicle, byte bumperId);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetBumperDamageLevel(IntPtr vehicle, byte bumperId, byte damageLevel);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_GetDamageDataBase64(IntPtr vehicle, ref IntPtr text);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_LoadDamageDataFromBase64(IntPtr vehicle, string base64);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetManualEngineControl(IntPtr vehicle, bool state);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern bool Vehicle_IsManualEngineControl(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_GetScriptDataBase64(IntPtr vehicle, ref IntPtr base64);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_LoadScriptDataFromBase64(IntPtr vehicle, string base64);
        }
    }
}